@@ -4,8 +4,10 @@ Ein Browser mit eigener Engine — reines Java (21+), gebaut mit Maven und Graal
 
 ## Module
 
-* **[engine](./engine)** — die Browicy-Browser-Engine: HTML-Tokenizer, Parser und DOM.
-  Keine externen Abhängigkeiten.
+* **[engine](./engine)** — die Browicy-Browser-Engine: HTML-Tokenizer, Parser, DOM,
+  eigener HTTP-Client sowie JavaScript-Ausführung. HTML/DOM/Netzwerk sind eigenständig
+  implementiert; für JavaScript wird [GraalJS](https://www.graalvm.org/javascript/)
+  über die GraalVM-Polyglot-API eingebettet (einzige externe Abhängigkeit).
 * **[desktop](./desktop)** — das Browser-Fenster (Swing): rahmenloses Fenster mit eigener
   Titelleiste, Tabs, Adressleiste und DOM-Renderer. Reines Java ohne UI-Fremdbibliotheken,
   damit später eine Kompilierung mit GraalVM native-image möglich ist.
@@ -26,12 +28,20 @@ run.cmd
 
 # Ausführbares Jar bauen und mit GraalVM starten
 mvn-graal.cmd package
-D:\Graal\graalvm-25.1.3+9.1\bin\java.exe -jar desktop\target\browicy-desktop-0.1.0-SNAPSHOT.jar
+D:\Graal\graalvm-25.1.3+9.1\bin\java.exe --sun-misc-unsafe-memory-access=allow -jar desktop\target\browicy-desktop-0.1.0-SNAPSHOT.jar
 ```
+
+Das Flag `--sun-misc-unsafe-memory-access=allow` unterdrückt die JDK-Warnung,
+die Truffle (GraalJS) beim Initialisieren auslöst; der nötige Native-Access ist
+bereits im Jar-Manifest freigeschaltet (`Enable-Native-Access: ALL-UNNAMED`).
+Bei `run.cmd` setzt `mvn-graal.cmd` beide Flags automatisch über `MAVEN_OPTS`.
 
 Weitere Maven-Argumente werden unverändert durchgereicht, beispielsweise
 `mvn-graal.cmd test`. In IntelliJ IDEA sollte für das Projekt und den Maven Runner
-ebenfalls `D:\Graal\graalvm-25.1.3+9.1` als JDK ausgewählt werden.
+ebenfalls `D:\Graal\graalvm-25.1.3+9.1` als JDK ausgewählt werden. Zum Starten aus
+der IDE die mitgelieferte Run-Konfiguration **„Browicy“** (`.run/Browicy.run.xml`)
+verwenden — sie setzt die JVM-Flags, ohne die das JDK beim Initialisieren der
+JavaScript-Engine (Truffle/GraalJS) Warnungen ausgibt.
 
 ## GraalVM native-image
 
@@ -43,6 +53,20 @@ mvn-graal.cmd -Pnative -pl desktop -am package
 
 Hinweis: Swing/AWT-Unterstützung in native-image erfordert ein aktuelles GraalVM;
 ggf. sind zusätzliche Reachability-Metadaten nötig.
+
+## JavaScript (Prototyp)
+
+Die Engine führt beim Laden einer Seite alle Inline-`<script>`-Blöcke über
+GraalJS aus (`com.browicy.engine.js.JavaScriptEngine`). Die Skripte laufen in
+einer Sandbox ohne Host-Zugriff (kein Java, kein Dateisystem, keine Prozesse)
+und mit Statement-Limit gegen Endlosschleifen. Als DOM-API stehen aktuell u.a.
+`document.title`, `document.getElementById`, `document.createElement`,
+`element.textContent`, `element.setAttribute` und `element.appendChild` zur
+Verfügung; `console.log`-Ausgaben und Skriptfehler werden gesammelt
+(`JsExecutionResult`) und sind wie im Browser nicht fatal.
+
+Noch nicht unterstützt: externe Skripte (`<script src=…>`), Events, Timer
+(`setTimeout`) und dynamisches Nachladen.
 
 ## Tests
 
